--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@prisma/client": "^6.5.0",
     "antd": "^5.24.5",
     "axios": "^1.8.4",
+    "cloudinary": "^2.6.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^4.4.1",
     "stripe": "^18.0.0"
   },
   "devDependencies": {
